# cisogenie-bookmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  schemas.py  security.py
app/routers/: auth.py  bookmark.py
static/: script.js
templates/: index.html
